--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@ vignettes/*.pdf
 .httr-oauth
 
 # knitr and R markdown default cache directories
-*_cache/
+*logo*
 /cache/
+
+# graphics and logo
+*_cache/
+/graphics/
 
 # Temporary files created by R markdown
 *.utf8.md
@@ -41,3 +45,4 @@ vignettes/*.pdf
 .Renviron
 doc
 Meta
+.DS_Store
