Add travis config files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: glmmSeq
-Title: General Linear Mixed Models for Gene-level Differential Expression
+Title: General Linear Mixed Models for Gene-Level Differential Expression
 Version: 0.0.1
 Authors@R:
     c(person(given = "Myles",family = "Lewis", role = c("aut"), email = "myles.lewis@qmul.ac.uk"),
