--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@ vignettes/*.pdf
 .httr-oauth
 
 # knitr and R markdown default cache directories
-*logo*
 /cache/
 
 # graphics and logo
@@ -43,7 +42,10 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Others
 doc
 Meta
 .DS_Store
 package_creator.R
+./logo.png
