--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,27 @@ Package: glmmSeq
 Title: General Linear Mixed Models for Gene-Level Differential Expression
 Version: 0.0.1
 Authors@R:
-    c(person(given = "Myles",family = "Lewis", role = c("aut"), email = "myles.lewis@qmul.ac.uk"),
-    person(given = "Katriona",family = "Goldmann", role = c("aut", "cre"), email = "k.goldmann@qmul.ac.uk"),
-    person(given = "Elisabetta",family = "Sciacca", role = c("aut"), email = "e.sciacca@qmul.ac.uk"),
-    person(given = "Cankut",family = "Cubuk", role = c("aut"), email = "c.cubuk@qmul.ac.uk") ,
-    person(given = "Anna", family = "Surace", role = c("aut"), email = "a.surace@qmul.ac.uk"))
-Description: models gene expression with a general linear mixed model. The most widely used mainstream differential gene expression analysis tools are all unable to fit mixed effects linear models. This package however fits negative binomial mixed effects models at individual gene level enables random effect, as as well as mixed effects, to be modelled. The particularly useful for investigating the changes in gene expression between groups of individuals over time.
+    c(person(given = "Myles",family = "Lewis",
+    role = c("aut"),
+    email = "myles.lewis@qmul.ac.uk",
+    comment = c(ORCID = "0000-0001-9365-5345")),
+    person(given = "Katriona",family = "Goldmann",
+    role = c("aut", "cre"),
+    email = "k.goldmann@qmul.ac.uk",
+    comment = c(ORCID = "0000-0002-9073-6323")),
+    person(given = "Elisabetta",family = "Sciacca",
+    role = c("aut"),
+    email = "e.sciacca@qmul.ac.uk",
+    comment = c(ORCID = "0000-0001-7525-1558")),
+    person(given = "Cankut",family = "Cubuk",
+    role = c("ctb"),
+    email = "c.cubuk@qmul.ac.uk",
+    comment = c(ORCID = "0000-0003-4646-0849")),
+    person(given = "Anna", family = "Surace",
+    role = c("ctb"),
+    email = "a.surace@qmul.ac.uk",
+    comment = c(ORCID = "0000-0001-9589-3005")))
+Description: Using random effects, as as well as mixed effects, to model gene expression at an individual gene level. The most widely used mainstream differential gene expression analysis tools are all unable to fit mixed effects linear models. This package however fits negative binomial mixed effects models. The particularly useful for investigating the changes in gene expression between groups of individuals over time.
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
