--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,7 +10,7 @@ authors:
     href: https://www.qmul.ac.uk/c4tb/our-team/profiles/goldmann-katriona.html
   Elisabetta Sciacca:
     href: https://www.qmul.ac.uk/c4tb/our-team/profiles/sciacca-elisabetta-.html
-  Cankut Çubuk:
+  Cankut Cubuk:
     href: https://www.qmul.ac.uk/whri/people/research-staff/
   Anna Surace:
     href: https://www.qmul.ac.uk/whri/people/research-staff/
