Add progress bar to glmmSeq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,8 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
+importFrom(pbapply,pblapply)
+importFrom(pbmcapply,pbmclapply)
 importFrom(plotly,"%>%")
 importFrom(plotly,config)
 importFrom(plotly,layout)
