--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: glmmSeq
 Title: General Linear Mixed Models for Gene-Level Differential Expression
-Version: 0.0.1
+Version: 0.1.0
 Authors@R:
     c(person(given = "Myles",family = "Lewis",
     role = c("aut"),
@@ -48,4 +48,6 @@ Imports:
     lme4,
     methods,
     plotly,
-    qvalue
+    qvalue,
+    pbapply,
+    pbmcapply
