--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: '2.11'
+pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   glmmSeq: glmmSeq.html
-last_built: 2021-03-18T17:14Z
+last_built: 2021-03-30T10:35Z
 
