--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Description: Using random and fixed effects to model expression at an individual
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+biocViews:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Language: en-gb
