Bug fixes & documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(glmerApply)
 export(glmmGene)
 export(glmmQvals)
 export(glmmSeq)
+export(lmerApply)
+export(lmmSeq)
 export(maPlot)
 export(modelPlot)
 export(pairedPlot)
@@ -53,6 +55,8 @@ importFrom(lme4,fixef)
 importFrom(lme4,glmer)
 importFrom(lme4,glmerControl)
 importFrom(lme4,isSingular)
+importFrom(lme4,lmer)
+importFrom(lme4,lmerControl)
 importFrom(lme4,nobars)
 importFrom(lme4,subbars)
 importFrom(methods,new)
