Fast lmer Wald test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(glmmQvals)
 export(glmmSeq)
 export(lmerApply)
 export(lmmSeq)
+export(lmmSeq2)
 export(maPlot)
 export(modelPlot)
 export(pairedPlot)
@@ -80,6 +81,7 @@ importFrom(stats,AIC)
 importFrom(stats,complete.cases)
 importFrom(stats,logLik)
 importFrom(stats,model.matrix)
+importFrom(stats,pchisq)
 importFrom(stats,predict)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
