Update package docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(glmerApply)
 export(glmmGene)
 export(glmmQvals)
 export(glmmSeq)
+export(glmmSeq2)
 export(lmerApply)
 export(lmmSeq)
 export(lmmSeq2)
