--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,12 @@
 
 export(fcPlot)
 export(ggpairedPlot)
-export(glmerApply)
 export(glmmGene)
 export(glmmQvals)
 export(glmmSeq)
-export(glmmSeq2)
-export(lmerApply)
+export(glmmSeq_v1)
 export(lmmSeq)
-export(lmmSeq2)
+export(lmmSeq_v1)
 export(maPlot)
 export(modelPlot)
 export(pairedPlot)
