--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(lme4,lmer)
 importFrom(lme4,lmerControl)
 importFrom(lme4,nobars)
 importFrom(lme4,subbars)
+importFrom(lmerTest,lmer)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(parallel,clusterEvalQ)
