Rename pairedPlot as modelPlot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(lmmRefit,GlmmSeq)
 S3method(lmmRefit,lmmSeq)
 S3method(summary,lmmSeq)
 export(fcPlot)
-export(ggpairedPlot)
+export(ggmodelPlot)
 export(glmmGene)
 export(glmmQvals)
 export(glmmSeq)
@@ -14,7 +14,6 @@ export(lmmSeq)
 export(lmmSeq_v1)
 export(maPlot)
 export(modelPlot)
-export(pairedPlot)
 importFrom(MASS,negative.binomial)
 importFrom(car,Anova)
 importFrom(gghalves,geom_half_violin)
@@ -25,7 +24,6 @@ importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_boxplot)
-importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
@@ -49,7 +47,6 @@ importFrom(ggpubr,ggarrange)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,boxplot)
-importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,plot)
