Fix check() errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ export(maPlot)
 export(modelPlot)
 importFrom(MASS,negative.binomial)
 importFrom(car,Anova)
-importFrom(gghalves,geom_half_violin)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotate)
@@ -63,6 +62,7 @@ importFrom(lme4,lmerControl)
 importFrom(lme4,nobars)
 importFrom(lme4,subbars)
 importFrom(lmerTest,lmer)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(parallel,clusterEvalQ)
@@ -81,9 +81,12 @@ importFrom(plotly,plot_ly)
 importFrom(plotly,subplot)
 importFrom(qvalue,qvalue)
 importFrom(stats,AIC)
+importFrom(stats,anova)
+importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,logLik)
 importFrom(stats,model.matrix)
+importFrom(stats,p.adjust)
 importFrom(stats,pchisq)
 importFrom(stats,predict)
 importFrom(stats,reshape)
