Speed up lmmSeq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,13 +50,18 @@ importFrom(graphics,mtext)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
+importFrom(lme4,checkConv)
 importFrom(lme4,findbars)
 importFrom(lme4,fixef)
 importFrom(lme4,glmer)
 importFrom(lme4,glmerControl)
 importFrom(lme4,isSingular)
+importFrom(lme4,lFormula)
 importFrom(lme4,lmerControl)
+importFrom(lme4,mkLmerDevfun)
+importFrom(lme4,mkMerMod)
 importFrom(lme4,nobars)
+importFrom(lme4,optimizeLmer)
 importFrom(lme4,subbars)
 importFrom(lmerTest,lmer)
 importFrom(methods,is)
