--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.11.4
-pkgdown: 1.6.1
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   glmmSeq: glmmSeq.html
-last_built: 2022-07-11T13:30Z
+last_built: 2022-08-12T11:41Z
 
