--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,9 @@ importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,unit)
 importFrom(ggpubr,ggarrange)
+importFrom(glmmTMB,glmmTMB)
+importFrom(glmmTMB,glmmTMBControl)
+importFrom(glmmTMB,nbinom2)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,boxplot)
