hyp_matrix function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(ggpubr,ggarrange)
 importFrom(glmmTMB,glmmTMB)
 importFrom(glmmTMB,glmmTMBControl)
 importFrom(glmmTMB,nbinom2)
+importFrom(glmmTMB,sigma)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,boxplot)
