--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ biocViews:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Language: en-gb
-URL: https://github.com/myles-lewis/glmmSeq
+URL: https://myles-lewis.github.io/glmmSeq/, https://github.com/myles-lewis/glmmSeq
 BugReports: https://github.com/myles-lewis/glmmSeq/issues
 Suggests:
     knitr,
