--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(lme4,nobars)
 importFrom(lme4,optimizeLmer)
 importFrom(lme4,subbars)
 importFrom(lmerTest,lmer)
+importFrom(mcprogress,pmclapply)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
@@ -79,7 +80,6 @@ importFrom(parallel,mclapply)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(pbapply,pblapply)
-importFrom(pbmcapply,pbmclapply)
 importFrom(plotly,"%>%")
 importFrom(plotly,config)
 importFrom(plotly,layout)
