--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(graphics,mtext)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
+importFrom(lme4,VarCorr)
 importFrom(lme4,checkConv)
 importFrom(lme4,findbars)
 importFrom(lme4,fixef)
